Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -111,7 +111,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Investment Amount </label>
+                                        Investment Amount *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputNumber
@@ -126,7 +126,7 @@
                                 <div class="Container45 Fleft CustomWidthFA2 MarTop5" style="display: none">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Recurring Funding </label>
+                                        Recurring Funding *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <div class="CustomWidthFA-Responsive" style="margin-top: 5px; font-size: 18px;">
@@ -149,7 +149,7 @@
                                 <!-- <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Bank Name </label>
+                                        Bank Name *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -160,7 +160,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Account Type</label>
+                                        Account Type*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
@@ -180,7 +180,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Bank Name </label>
+                                        Bank Name *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -192,7 +192,7 @@
                                 <div class="Container45 Fright CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Name on Bank Account </label>
+                                        Name on Bank Account *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -211,7 +211,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">ABA
-                                        Routing Number</label>
+                                        Routing Number*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -223,7 +223,7 @@
                                 <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Bank Account Number</label>
+                                        Bank Account Number*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -248,7 +248,7 @@
                                 <div class="Container32 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Account Title / Registration</label>
+                                        Account Title / Registration*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid85 FS14 CustomWidthFA-Responsive"
@@ -259,7 +259,7 @@
                                 </div>
                                 <div class="Container32 CustomWidthFA-Responsive">
                                     <label Class="Container100"
-                                           style="text-align: left !important; font-weight: bold !important;">Account Number</label>
+                                           style="text-align: left !important; font-weight: bold !important;">Account Number*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid85 FS14 CustomWidthFA-Responsive"
@@ -270,7 +270,7 @@
                                 </div>
                                 <div class="Container32 CustomWidthFA-Responsive">
                                     <label Class="Container100"
-                                           style="text-align: left !important; font-weight: bold !important;">Name of delivery firm</label>
+                                           style="text-align: left !important; font-weight: bold !important;">Name of delivery firm*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
@@ -327,7 +327,7 @@
                                 </div>
                                 <div class="Container30 CustomWidthFA-Responsive">
                                     <label Class="Container100"
-                                           style="text-align: left !important; font-weight: bold !important;">Account Type</label>
+                                           style="text-align: left !important; font-weight: bold !important;">Account Type*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
@@ -381,7 +381,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Receiving Bank Name</label>
+                                        Receiving Bank Name*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -393,7 +393,7 @@
                                 <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Name on Receiving Bank Account</label>
+                                        Name on Receiving Bank Account*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -407,7 +407,7 @@
                                 <div class="Container45 Fleft CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        ABA Routing Number</label>
+                                        ABA Routing Number*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -418,7 +418,7 @@
                                 <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">
-                                        Receiving Bank Account Number</label>
+                                        Receiving Bank Account Number*</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -478,7 +478,7 @@
                             <div class="Container45 Fleft CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Frequency </label>
+                                    Frequency *</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
@@ -504,7 +504,7 @@
                             </div>
  <div class="Container45 Fright CustomWidthFA-Responsive">
                                 <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Bank Account Title <span class="Fs12">(Please provide full title of the account)</span></label>
+                                       style="text-align: left !important; font-weight: bold !important;">Bank Account Title <span class="Fs12">(Please provide full title of the account)</span>*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
@@ -520,7 +520,7 @@
                             <div class="Container45 Fleft CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Amount </label>
+                                    Amount *</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputNumber
@@ -535,7 +535,7 @@
                             <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Start Date </label>
+                                    Start Date *</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputMask styleClass="Wid100 FS14 CustomWidthFA-Responsive"
@@ -551,7 +551,7 @@
                             <div class="Container45 Fleft CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Bank Name </label>
+                                    Bank Name *</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
@@ -563,7 +563,7 @@
                             <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Account Type</label>
+                                    Account Type*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
@@ -587,7 +587,7 @@
                             <div class="Container45 Fleft CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">ABA
-                                    Routing Number</label>
+                                    Routing Number*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
@@ -599,7 +599,7 @@
                             <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">
-                                    Bank Account Number</label>
+                                    Bank Account Number*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
