--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -25,7 +25,7 @@
                         <label Class="Container60"
                                style="text-align: left !important; font-weight: bold !important;">
                             Residence Address
-                        </label>
+                       *</label>
 
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
@@ -44,7 +44,7 @@
                     <div class="Container100 CustomWidthFA2 MarTop5">
                         <div class="Container30 CustomWidthFA-Responsive">
                             <label Class="Container100"
-                                   style="text-align: left !important; font-weight: bold !important;">City</label>
+                                   style="text-align: left !important; font-weight: bold !important;">City*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -59,7 +59,7 @@
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">
                                 State
-                            </label>
+                           *</label>
 
                             <div class="EmptyBox5"></div>
                             <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressState}"
@@ -77,7 +77,7 @@
                                 class="Container30 CustomWidthFA-Responsive Fright-FAAddress">
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">Zip
-                                Code</label>
+                                Code*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -113,7 +113,7 @@
                         <label Class="Container60"
                                style="text-align: left !important; font-weight: bold !important;">
                             Mailing Address
-                        </label>
+                       *</label>
 
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
@@ -130,7 +130,7 @@
                     <div class="Container100 CustomWidthFA2 MarTop5">
                         <div class="Container30 CustomWidthFA-Responsive">
                             <label Class="Container100"
-                                   style="text-align: left !important; font-weight: bold !important;">City</label>
+                                   style="text-align: left !important; font-weight: bold !important;">City*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -142,7 +142,7 @@
                         <div
                                 class="Container30 CustomWidthFA-Responsive Margin-FAAddress">
                             <label Class="Container100"
-                                   style="text-align: left !important; font-weight: bold !important;">State</label>
+                                   style="text-align: left !important; font-weight: bold !important;">State*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressState}"
@@ -160,7 +160,7 @@
                                 class="Container30 CustomWidthFA-Responsive Fright-FAAddress">
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">Zip
-                                Code</label>
+                                Code*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -212,7 +212,7 @@
                         <label Class="Container60"
                                style="text-align: left !important; font-weight: bold !important;">
                             Residence Address
-                        </label>
+                       *</label>
 
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
@@ -231,7 +231,7 @@
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">
                                 City
-                            </label>
+                           *</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -244,7 +244,7 @@
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">
                                 State
-                            </label>
+                           *</label>
 
                             <div class="EmptyBox5"></div>
                             <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressState}"
@@ -261,7 +261,7 @@
                             <label Class="Container100"
                                    style="text-align: left !important; font-weight: bold !important;">
                                 Zip Code
-                            </label>
+                           *</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -297,7 +297,7 @@
 
                             <label Class="Container60"
                                    style="text-align: left !important; font-weight: bold !important;">Mailing
-                                Address</label>
+                                Address*</label>
 
                             <div class="EmptyBox5"></div>
                             <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
@@ -314,7 +314,7 @@
                         <div class="Container100 CustomWidthFA2 MarTop5">
                             <div class="Container30 CustomWidthFA-Responsive">
                                 <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">City</label>
+                                       style="text-align: left !important; font-weight: bold !important;">City*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
@@ -325,7 +325,7 @@
                             </div>
                             <div class="Container30 CustomWidthFA-Responsive Margin-FAAddress">
                                 <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">State</label>
+                                       style="text-align: left !important; font-weight: bold !important;">State*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressState}"
@@ -342,7 +342,7 @@
                             <div class="Container30 CustomWidthFA-Responsive Fright-FAAddress">
                                 <label Class="Container100"
                                        style="text-align: left !important; font-weight: bold !important;">Zip
-                                    Code</label>
+                                    Code*</label>
 
                                 <div class="EmptyBox5"></div>
                                 <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
