Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -152,7 +152,7 @@
                 </div>
             </div>
 
-            <div class="Container100 MarTop20" style="margin: 10px 10px;">
+            <div class="Container100 MarTop20 acctTypeBtnNxt" style="margin: 10px 10px;">
                
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
