--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -57,7 +57,7 @@
     </p:panel>
             </div>
             <div class="EmptyBox20"></div>
-            <p:panel styleClass="BeneficiaryEditPanel" style="border: 0px; background: transparent; margin-top: -10px;"
+            <p:panel styleClass="BeneficiaryEditPanel" style="padding: 0px 5px!important;box-sizing: border-box;border: 0px; background: transparent; margin-top: -10px;"
                      rendered="#{tdcto.tdMasterData.owneremploymentDetail.needInfo}">
              
                 <div class="Container100">
@@ -245,7 +245,7 @@
                 </p:panel>
                 </div>
      <div class="EmptyBox20"></div>
-                <p:panel styleClass="BeneficiaryEditPanel" style="border: 0px; background: transparent; margin-top: -10px;"
+                <p:panel styleClass="BeneficiaryEditPanel" style="padding: 0px 5px!important;box-sizing: border-box;border: 0px; background: transparent; margin-top: -10px;"
                          rendered="#{tdcto.tdMasterData.jointEmploymentDetail.needInfo}">
 
                     <div class="Container100">
