--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -108,7 +108,7 @@
                                           value="#{tdcto.saveandOpenError}" escape="false"/>
 
                         </div>
-                        <div class="Container100" style="text-align: center;">
+                        <div class="Container100 saveNopenBtn" style="text-align: center;">
                             <p:commandButton value="Save and Open Account" ajax="true"
                                              update="@form"
                                              actionListener="#{tdcto.openAccount}"
