--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -115,7 +115,7 @@
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputNumber
-                                            styleClass="Wid85 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
+                                            styleClass="Wid100 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                             style="text-align: left;"
                                             value="#{tdcto.tdMasterData.initialInvestment}" maxlength="11"
                                             symbol="$" decimalPlaces="2" required="false"
@@ -141,7 +141,7 @@
                         </div>
 
                         <!-- ACH -->
-                        <p:panel id="achPanel" styleClass="Container80 Fnone"
+                        <p:panel id="achPanel" styleClass="Container80 Responsive100 Fnone"
                                  style="border: 0px; background: transparent; margin: 0 auto!important;"
                                  rendered="#{tdcto.tdMasterData.fundType == 'PMACH'}">
                             <div class="EmptyBox20"></div>
@@ -165,7 +165,7 @@
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
                                                      value="#{tdcto.tdMasterData.achBankDetail.bankAcctType}"
-                                                     style="width: 90%;">
+                                                     style="width: 100%;">
                                         <p:ajax/>
                                         <f:selectItem itemLabel="Select Type" itemValue=""
                                                       noSelectionOption="true"/>
@@ -204,7 +204,7 @@
                             </div>
                             <div class="EmptyBox20"></div>
                             <div class="Container100" style="">
-                                <img src="/images/check_image.gif"/>
+                                <img src="/images/check_image.gif" class="ResCheckSize"/>
                             </div>
                             <div class="EmptyBox20"></div>
                             <div class="Container100">
@@ -237,7 +237,7 @@
                         </p:panel>
 
                         <!-- ACAT -->
-                        <p:panel id="acatPanel" styleClass="Container80 FundCenterAlignBlock"
+                        <p:panel id="acatPanel" styleClass="Container80 Responsive100 FundCenterAlignBlock"
                                  style="border: 0px; background: transparent"
                                  rendered="#{tdcto.tdMasterData.fundType == 'PMFEDW'}">
                             <!-- 2 -->
@@ -275,7 +275,7 @@
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccouintDropdownUI"
                                                      value="#{tdcto.tdMasterData.acatDetails.contraFirmList}"
-                                                     style="width: 100%;">
+                                                     style="width: 100%!important; box-sizing: border-box; min-width: auto!important;">
                                         <p:ajax/>
                                         <f:selectItem itemLabel="Select the Delivery Firm" itemValue=""
                                                       noSelectionOption="true"/>
@@ -580,7 +580,7 @@
                         </div>
                         <div class="EmptyBox20"></div>
                         <div class="Container100" style="">
-                            <img src="/images/check_image.gif"/>
+                            <img src="/images/check_image.gif" class="ResCheckSize"/>
                         </div>
                         <div class="EmptyBox20"></div>
                         <div class="Container100">
