Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -411,7 +411,7 @@
                         <p:selectBooleanCheckbox
                                 styleClass="RegulatoryCheckBox"
                                 value="#{tdcto.tdMasterData.fundNow}"
-                                itemLabel="Do you want to fund now?">
+                                itemLabel="I choose to opt out of funding for now.">
                             <p:ajax update=":ctoForm:tdaccordian:fundTabV:funddetailsPanel"/>
                         </p:selectBooleanCheckbox>
                     </div>
@@ -600,7 +600,7 @@
                             <p:selectBooleanCheckbox
                                     styleClass="RegulatoryCheckBox"
                                     value="#{tdcto.tdMasterData.recurringFlag}"
-                                    itemLabel="I would like to make recurring investments.">
+                                    itemLabel="I choose to opt out of recurring for now">
                                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
                             </p:selectBooleanCheckbox>
                         </div>
