Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -276,6 +276,11 @@
                                         <f:selectItem itemValue="WEDBSECUINC" itemLabel="Wedbush Securities Inc." />
                                         <f:selectItem itemValue="OTH" itemLabel="Others" />
                                     </p:selectOneMenu>
+                                    <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                                 value=""
+                                                 maxlength="90"
+                                                 placeholder="Other Delivery Firm">
+                                    </p:inputText>
                                 </div>
                             </div>
                             <div class="EmptyBox20"></div>
@@ -302,7 +307,7 @@
                                                  placeholder="Phone Number">
                                     </p:inputText>
                                 </div>
-                                <div class="Container30 CustomWidthFA-Responsive">
+                                <div class="Container32 CustomWidthFA-Responsive">
                                     <label Class="Container100"
                                            style="text-align: left !important; font-weight: bold !important;">Account Type *</label>
 
